2003-11-30  Andy <andyp@users.sf.net>

	* stripped out the colour-changing code from the setup_druid as
	  it is inconsistent to change the heading colour between pages
	

2003-11-29  Terry <tbiggs@users.sf.net>

	* add gnome-spell support


2003-11-28  Terry <tbiggs@users.sf.net>

	* remove close button from the search dialog


2003-11-27  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev16
	* worked on bug 842526 - needs testing
	* changed icons in setup_druid to gs2-48x48.png


2003-11-25  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev15
	* configure enables spellchecking if it finds pspell.
	* studypad chrash on open is fixed again.
	* if there are no modules of a type the pane for that type will
	  be hidden.


2003-11-24  Terry <tbiggs@users.sf.net>

	* removed gnome2/shortcutbar.h it was no longer needed
	* combined "search results" and "verse list" in the sidebar


2003-11-24  Andy Piper <andyp@users.sf.net>

	* docs are conventionally installed to /usr/share/doc and not to
	  /usr/doc so we'll fix configure.in and Makefile.am to do that. This
	  means that a 'make uninstall' won't kill the /usr/doc directory
	  (which probably only contains a gnomesword2 directory as /usr/doc
	  is not usually present on e.g. RedHat/Fedora systems, probably
          others) so it will need to be removed manually to avoid cruftage.


2003-11-23  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev14
	* changed 4 clists to listviews in gnome2/search_dialog.c
	* worked on bug 842524 - needs testing
	* added a button to toggle between text and parallel view.
	* added a button to toggle between book and dict/lex view.


2003-11-20  Terry <tbiggs@users.sf.net>

	* fixed bug 845752
	* ui clean up
		* moved parallel view to bibletexts pane
		* removed File->Open Dialogs form main menu
		  (dialogs may be opened by right clicking in module
		  list and chosing <Open in dialog>
		* Removed Help->About Modules from main menus